# VINS-Fusion

camera_models/: CMakeLists.txt
camera_models/src/: intrinsic_calib.cc
camera_models/src/camera_models/: CataCamera.cc  EquidistantCamera.cc
camera_models/src/chessboard/: Chessboard.cc
camera_models/src/gpl/: gpl.cc
config/euroc/: euroc_stereo_imu_config.yaml
global_fusion/: CMakeLists.txt
global_fusion/src/: globalOpt.cpp  globalOptNode.cpp
loop_fusion/: CMakeLists.txt
loop_fusion/src/: pose_graph.cpp  pose_graph_node.cpp
vins_estimator/: CMakeLists.txt
vins_estimator/src/: KITTIOdomTest.cpp
vins_estimator/src/estimator/: estimator.cpp  parameters.cpp  parameters.h
vins_estimator/src/factor/: marginalization_factor.cpp  marginalization_factor.h
vins_estimator/src/featureTracker/: feature_tracker.h
vins_estimator/src/initial/: initial_sfm.cpp
